--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,20 @@
-lili: salam
-sss;w: qcneiw
-sss;w: HISTORY
-sss;w: dd
-lili: adcr
+dalli: salam
+salam: dalam
+ali: سلام
+ali: HISTORY
+ali exited from the game...
+salam: BRIM
+salam: HISTORY
+sali exited from the game...
+billie: salam
+mohsen: aleyk
+fhr: salam
+billie: salam
+sali: dd
+e,d: aass
+billie: egrw5
+billie: dfffg
+ali: fdf
+fege: salam
+sali: salam
+sali exited from the game...
