commit7 ta voting dorost

--- a/history.txt
+++ b/history.txt
@@ -1,20 +1,23 @@
-dalli: salam
-salam: dalam
-ali: سلام
-ali: HISTORY
-ali exited from the game...
-salam: BRIM
-salam: HISTORY
-sali exited from the game...
-billie: salam
-mohsen: aleyk
-fhr: salam
-billie: salam
-sali: dd
-e,d: aass
-billie: egrw5
-billie: dfffg
-ali: fdf
-fege: salam
+didi: salam
+manni: salam
 sali: salam
-sali exited from the game...
+didi: salam
+mannie: salam
+ali: salam
+maggie: salam
+sali: salam
+maddi: gg
+krgerjve: ss
+eihg: fsfsf
+gg: salam
+baddi: bah bah
+ali: ss
+ali: wrfer
+mori: salam
+mm: rfers
+ali: edgvt
+fifi: salam
+sali: salam
+sali: HISTORY
+ali: brim
+sali: salam
